<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout android:background="#ffffffff" android:layout_width="fill_parent" android:layout_height="fill_parent" android:layout_marginTop="15.0dip"
  xmlns:android="http://schemas.android.com/apk/res/android">
    <LinearLayout android:gravity="center_horizontal" android:orientation="vertical" android:layout_width="wrap_content" android:layout_height="fill_parent" android:layout_marginTop="10.0dip" android:layout_centerHorizontal="true">
        <com.app.elitesample.utils.OpenSansRegularTxt android:textSize="@dimen/login_welcome_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:text="@string/login_welcome" />
        <com.app.elitesample.utils.OpenSansLightTxt android:textSize="@dimen/login_just_enter_size" android:layout_width="wrap_content" android:layout_height="wrap_content" android:layout_marginTop="10.0dip" android:text="@string/login_just_enter" />
        <EditText android:gravity="center" android:id="@id/phone_number" android:background="@drawable/login_input_back" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:hint="@string/login_phone" android:maxLines="1" />
        <EditText android:gravity="center" android:id="@id/confirm_phone" android:background="@drawable/login_input_back" android:paddingLeft="5.0dip" android:paddingRight="5.0dip" android:layout_width="fill_parent" android:layout_height="40.0dip" android:layout_marginLeft="10.0dip" android:layout_marginTop="20.0dip" android:layout_marginRight="10.0dip" android:hint="@string/login_confirm_phone" android:maxLines="1" />
        <ImageView android:id="@id/loginBtnView" android:background="@drawable/loginbutton" android:layout_width="@dimen/login_btn_width" android:layout_height="@dimen/login_btn_height" android:layout_marginTop="25.0dip" android:contentDescription="dffrgrgsgsgsg" />
    </LinearLayout>
</RelativeLayout>